Background suspended Netflix cannot resume
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
People
(Reporter: cpearce, Assigned: kaku)
References
Details
(Whiteboard: [platform-rel-Netflix])
Attachments
(2 files)
Comment 2•9 years ago
|
||
| Reporter | ||
Comment 3•9 years ago
|
||
| Reporter | ||
Comment 4•9 years ago
|
||
Updated•9 years ago
|
| Assignee | ||
Comment 6•9 years ago
|
||
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 8•9 years ago
|
||
Comment 9•9 years ago
|
||
| mozreview-review | ||
Comment 10•9 years ago
|
||
| Assignee | ||
Comment 11•9 years ago
|
||
Comment 12•9 years ago
|
||
Comment 13•9 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 14•9 years ago
|
||
| Reporter | ||
Comment 15•9 years ago
|
||
| Assignee | ||
Comment 16•9 years ago
|
||
Comment 17•9 years ago
|
||
Comment 18•9 years ago
|
||
Comment 19•1 year ago
•
|
||
I believe that this remains reproducible: I see F7375 if I resume a Netflix tab from suspension in firefox-141.0-2.fc42.x86_64. If nobody else does, apologies.
I do see github.com/xxxily/h5player/issues/317 from 2021, but it's not very actionable corroboration, considering its context and lack of detail.
Comment 20•1 year ago
|
||
When this issue happens, do you know what key system you were using for video? pressing CTRL+SHIFT+ALT+D on video will show you a debug panel on which you can find the key system. Thanks!
I didn't save the tab. However, if I re-visit it netflix.com/watch/80115466, I see:
Version: 6.0051.090.911 Esn: NFCDFF-LX-LR2WM6Q90YD7W1D6M04QK42H4JMR76 PBCID: 6.MJS79OdqYzxW1C5LnNZglGaaGAUlOPcirhi5hFCYfLE UserAgent: Mozilla/5.0 (X11; Linux x86_64; rv:141.0) Gecko/20100101 Firefox/141.0 MovieId: 80115466 PackageId: 2187278 Xid: 175373648663267680 (175373648663267680) Position: 0.669 Duration: 6359.353 PlayerDuration: 6359.353 Volume: 100% Segment: 80115466:main Segment Position: 0.669 Player state: Normal Buffering state: Normal Rendering state: Paused Playing bitrate (a/v): 128 / 766 (1920x1080) Playing/Buffering vmaf: 91/91 Buffering bitrate (a/v): 128 / 766 Buffer size in Bytes (a/v): 0 / 0 Buffer size in Bytes: 0 Buffer size in Seconds (a/v): 239.518 / 239.779 Downloadables (a/v): 466031447 / 509148875 Current CDN (a/v/t): c162.lhr004.ix.nflxvideo.net, Id: 78267 / c120.lhr004.ix.nflxvideo.net, Id: 56802 / ? Audio Track: ja, Id: A:2:1;2;ja;1;0;, Channels: 2.0, Codec: audio/mp4;codecs=mp4a.40.5 (he-aac) Audio Tags: Video Track: Codec: video/mp4;codecs=avc1.4d0028 (avc) Video Tags: AL1,EVE,MCCLEAREN_VP9,POI,ladder Timed Text Track: en, Profile: simplesdh, Id: T:2:0;1;en;0;0;0;, DownloadableId: 445191064 Framerate: 23.976 Current Dropped Frames: Total Frames: 17 Total Dropped Frames: 0 Total Corrupted Frames: undefined Main Thread stall/sec: DISABLED KeySystem: com.widevine.alpha.SW_SECURE_DECODE KeyStatus: AAAAAAgIrW4AAAAAAAAAAA==,AAAAAAgIrXAAAAAAAAAAAA==, ,, usable,usable VideoDiag: readyState=4,currentTime=0.668875,pbRate=1,videoBuffered=37.913,videoRanges=0-37.912875,audioBuffered=32.043,audioRanges=0-32.042666,duration=6359.3530 HDR support: false (disabled) Throughput: 13556 kbps
Hopefully, it hasn't changed itself since. I can't envision why it would.
Comment 22•1 year ago
|
||
Do you have consistent steps to reproduce this issue? Does it happen 100% of the time when resuming Netflix after suspension (by "suspension," I assume you mean putting the whole system to sleep and then logging back in)? Thanks!
That was weird phrasal on my part. I was actually referring to having the browser reinitialise (in my case, due to qdbus org.kde.LogoutPrompt /LogoutPrompt logoutAndShutdown). I forget that outside of Fenix and Chromium, tabs aren't generally suspended when not in use, except during OOM events.
Regardless, in retrospect, this was probably caused by github.com/MALSync/MALSync/issues/3134. I'll presume it is, since both my current, and a new, profile haven't reproduced this otherwise, even after suspending with qdbus-qt6 org.kde.kglobalaccel /component/org_kde_powerdevil invokeShortcut 'Sleep' and resuming (or "Quit").
Description
•