Bug 1352934 - make the seek operation at StateObject::HandleResumeVideoDecoding() unobservable; r=jwwang

The seeking operation WAS unobservable before Bug 1309494.
It was changed to be observable because I want the "canplay" event, which will be dispatched after the seeking operation is done,
to notify our video controller to cancel the throbber(which will be shown if the decoder resuming cannot be done in 250 ms).

Now, we can change the seeking operatoin back to unobservable thanks to bug 1350852.
In bug 1350852, we dispatche a specific "mozvideoonlyseekcompleted" event to cancel the throbber.

MozReview-Commit-ID: Ke9sqDPotAB